dnl Configure the fastcgi library.
dnl
dnl This file is free software; as a special exception the author gives
dnl unlimited permission to copy and/or distribute it, with or without
dnl modifications, as long as this notice is preserved.
dnl
dnl This program is distributed in the hope that it will be useful, but
dnl WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
dnl implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AC_INIT([fastcgi], [1.0], [simons@cryp.to], [fastcgi],
				[http://www.nongnu.org/fastcgi/])

AC_PREREQ(2.65)
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([-Wall -Werror 1.11 gnu filename-length-max=99])
AC_MSG_NOTICE([$PACKAGE_STRING])

AC_PROG_CXX
AC_LANG([C++])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
